--- a/src/gui_mainwindow.ui
+++ b/src/gui_mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tabWidgetPage0">
        <attribute name="title">
@@ -1162,6 +1162,9 @@
               <property name="maximum">
                <number>255</number>
               </property>
+              <property name="value">
+               <number>255</number>
+              </property>
              </widget>
             </item>
             <item row="0" column="0">
@@ -1486,8 +1489,8 @@
  <resources/>
  <connections/>
  <buttongroups>
+  <buttongroup name="buttonGroup_tab1_im0"/>
   <buttongroup name="buttonGroup_tab1_im1"/>
   <buttongroup name="buttonGroup_tab3_mouse"/>
-  <buttongroup name="buttonGroup_tab1_im0"/>
  </buttongroups>
 </ui>
