--- a/src/gui_mainwindow.ui
+++ b/src/gui_mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tabWidgetPage0">
        <attribute name="title">
@@ -536,7 +536,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="tab1_mask_checkBox">
+           <widget class="QCheckBox" name="tab1_maskW_checkBox">
             <property name="enabled">
              <bool>false</bool>
             </property>
@@ -548,7 +548,7 @@
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
-             <widget class="QLabel" name="label_32">
+             <widget class="QLabel" name="tab1_pixelpath_label">
               <property name="enabled">
                <bool>false</bool>
               </property>
@@ -562,6 +562,21 @@
               <property name="enabled">
                <bool>false</bool>
               </property>
+              <item>
+               <property name="text">
+                <string>Bresenham</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>actual</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>full</string>
+               </property>
+              </item>
              </widget>
             </item>
            </layout>
@@ -1444,7 +1459,7 @@
   <tabstop>tab1_measure_textEdit</tabstop>
   <tabstop>tab1_periodic_checkBox</tabstop>
   <tabstop>tab1_zeropad_checkBox</tabstop>
-  <tabstop>tab1_mask_checkBox</tabstop>
+  <tabstop>tab1_maskW_checkBox</tabstop>
   <tabstop>tab1_pixelpath_comboBox</tabstop>
   <tabstop>tabWidget</tabstop>
   <tabstop>tab2_im0Add_pushButton</tabstop>
@@ -1494,8 +1509,8 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_tab3_mouse"/>
   <buttongroup name="buttonGroup_tab1_im0"/>
   <buttongroup name="buttonGroup_tab1_im1"/>
+  <buttongroup name="buttonGroup_tab3_mouse"/>
  </buttongroups>
 </ui>
