--- a/src/gui_mainwindow.ui
+++ b/src/gui_mainwindow.ui
@@ -2358,6 +2358,9 @@
             <property name="enabled">
              <bool>true</bool>
             </property>
+            <property name="decimals">
+             <number>3</number>
+            </property>
             <property name="maximum">
              <double>1.000000000000000</double>
             </property>
@@ -2367,6 +2370,9 @@
            <widget class="QDoubleSpinBox" name="tab4_climHgh_raw_doubleSpinBox">
             <property name="enabled">
              <bool>true</bool>
+            </property>
+            <property name="decimals">
+             <number>3</number>
             </property>
             <property name="maximum">
              <double>1.000000000000000</double>
@@ -2770,6 +2776,9 @@
             <property name="enabled">
              <bool>true</bool>
             </property>
+            <property name="decimals">
+             <number>3</number>
+            </property>
             <property name="maximum">
              <double>1.000000000000000</double>
             </property>
@@ -2779,6 +2788,9 @@
            <widget class="QDoubleSpinBox" name="tab4_climHgh_interp_doubleSpinBox">
             <property name="enabled">
              <bool>true</bool>
+            </property>
+            <property name="decimals">
+             <number>3</number>
             </property>
             <property name="maximum">
              <double>1.000000000000000</double>
