--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tabWidgetPage0">
        <attribute name="title">
@@ -68,21 +68,11 @@
         </item>
         <item>
          <layout class="QGridLayout" name="gridLayout_3">
-          <item row="1" column="2">
-           <widget class="QPushButton" name="tab0_result_pushButton">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="text">
-             <string>Select</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="tab0_outdir_lineEdit"/>
+           <widget class="QLineEdit" name="tab0_out_path_lineEdit"/>
           </item>
           <item row="0" column="2">
-           <widget class="QPushButton" name="tab0_outdir_pushButton">
+           <widget class="QPushButton" name="tab0_out_path_pushButton">
             <property name="text">
              <string>Select</string>
             </property>
@@ -93,9 +83,6 @@
             <property name="text">
              <string>Store result/settings as (relative path):</string>
             </property>
-            <property name="buddy">
-             <cstring>tab0_result_pushButton</cstring>
-            </property>
            </widget>
           </item>
           <item row="0" column="0">
@@ -104,14 +91,14 @@
              <string>Working directory:</string>
             </property>
             <property name="buddy">
-             <cstring>tab0_outdir_pushButton</cstring>
+             <cstring>tab0_out_path_pushButton</cstring>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="tab0_result_lineEdit">
+           <widget class="QLineEdit" name="tab0_out_json_lineEdit">
             <property name="enabled">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
             <property name="text">
              <string/>
@@ -119,36 +106,16 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="tab0_pdfRaw_lineEdit">
+           <widget class="QLineEdit" name="tab0_res1path_lineEdit">
             <property name="enabled">
-             <bool>false</bool>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QLineEdit" name="tab0_pdfInterp_lineEdit">
+           <widget class="QLineEdit" name="tab0_res2path_lineEdit">
             <property name="enabled">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="QPushButton" name="tab0_pdfInterp_pushButton">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="text">
-             <string>Select</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="QPushButton" name="tab0_pdfRaw_pushButton">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-            <property name="text">
-             <string>Select</string>
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -157,18 +124,12 @@
             <property name="text">
              <string>Store PDF of raw result (relative path):</string>
             </property>
-            <property name="buddy">
-             <cstring>tab0_pdfInterp_pushButton</cstring>
-            </property>
            </widget>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="label_22">
             <property name="text">
              <string>Store PDF of interpreted result (relative path):</string>
-            </property>
-            <property name="buddy">
-             <cstring>tab0_pdfRaw_pushButton</cstring>
             </property>
            </widget>
           </item>
@@ -276,7 +237,7 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout_6">
           <item>
-           <widget class="QLabel" name="label_17">
+           <widget class="QLabel" name="label_23">
             <property name="font">
              <font>
               <weight>75</weight>
@@ -289,64 +250,91 @@
            </widget>
           </item>
           <item>
-           <widget class="QTreeWidget" name="tab1_measure_treeWidget">
-            <property name="headerHidden">
-             <bool>true</bool>
+           <widget class="QLabel" name="label_16">
+            <property name="font">
+             <font>
+              <italic>true</italic>
+             </font>
             </property>
-            <property name="columnCount">
-             <number>1</number>
+            <property name="text">
+             <string>Spatial correlations</string>
             </property>
-            <column>
-             <property name="text">
-              <string notr="true">1</string>
-             </property>
-            </column>
-            <item>
-             <property name="text">
-              <string>Spatial correlations</string>
-             </property>
-             <item>
-              <property name="text">
-               <string>2-point probability</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>2-point cluster</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Lineal path</string>
-              </property>
-             </item>
-            </item>
-            <item>
-             <property name="text">
-              <string>Conditional spatial correlations</string>
-             </property>
-             <item>
-              <property name="text">
-               <string>2-point probability</string>
-              </property>
-             </item>
-             <item>
-              <property name="text">
-               <string>Collapsed 2-point probability</string>
-              </property>
-             </item>
-            </item>
-            <item>
-             <property name="text">
-              <string>Prediction from conditional statistics</string>
-             </property>
-             <item>
-              <property name="text">
-               <string>2-point probability</string>
-              </property>
-             </item>
-            </item>
            </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="stat_S2_radioButton">
+            <property name="text">
+             <string>2-point probability (S2)</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="stat_C2_radioButton">
+            <property name="text">
+             <string>2-point cluster (C2): calls S2</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="stat_L_radioButton">
+            <property name="text">
+             <string>Lineal path (L)</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_18">
+            <property name="font">
+             <font>
+              <italic>true</italic>
+             </font>
+            </property>
+            <property name="text">
+             <string>Conditional spatial correlations</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="stat_W2_radioButton">
+            <property name="text">
+             <string>2-point probablity (W2)</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="stat_W2c_radioButton">
+            <property name="text">
+             <string>Collapsed 2-point probability (W2c)</string>
+            </property>
+            <attribute name="buttonGroup">
+             <string notr="true">buttonGroup</string>
+            </attribute>
+           </widget>
+          </item>
+          <item>
+           <spacer name="verticalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </item>
@@ -592,6 +580,9 @@
             <property name="text">
              <string>Assume periodic (faster)</string>
             </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
            </widget>
           </item>
           <item>
@@ -611,6 +602,9 @@
             </property>
             <property name="text">
              <string>Use weights as mask </string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
@@ -754,6 +748,27 @@
                 </property>
                </widget>
               </item>
+              <item>
+               <widget class="QPushButton" name="tab2_im0Up__pushButton">
+                <property name="text">
+                 <string>Up</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="tab2_im0Dwn_pushButton">
+                <property name="text">
+                 <string>Down</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="tab2_im0Srt_pushButton">
+                <property name="text">
+                 <string>Sort</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </item>
            </layout>
@@ -875,6 +890,16 @@
                 </property>
                 <property name="text">
                  <string>Down</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="tab2_im1Srt_pushButton">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+                <property name="text">
+                 <string>Sort</string>
                 </property>
                </widget>
               </item>
@@ -2851,12 +2876,10 @@
  </customwidgets>
  <tabstops>
   <tabstop>tab0_load_pushButton</tabstop>
-  <tabstop>tab0_outdir_pushButton</tabstop>
-  <tabstop>tab0_outdir_lineEdit</tabstop>
-  <tabstop>tab0_result_pushButton</tabstop>
-  <tabstop>tab0_result_lineEdit</tabstop>
+  <tabstop>tab0_out_path_pushButton</tabstop>
+  <tabstop>tab0_out_path_lineEdit</tabstop>
+  <tabstop>tab0_out_json_lineEdit</tabstop>
   <tabstop>tab0_scrollArea</tabstop>
-  <tabstop>tab1_measure_treeWidget</tabstop>
   <tabstop>tab1_im1_checkBox</tabstop>
   <tabstop>tab1_im1b_radioButton</tabstop>
   <tabstop>tab1_im0i_radioButton</tabstop>
@@ -2925,8 +2948,9 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_tab3_mouse"/>
+  <buttongroup name="buttonGroup"/>
   <buttongroup name="buttonGroup_tab1_im0"/>
   <buttongroup name="buttonGroup_tab1_im1"/>
+  <buttongroup name="buttonGroup_tab3_mouse"/>
  </buttongroups>
 </ui>
